<resources>
    <string name="app_name">GitUwu</string>
    <string name="home_title">Home</string>
    <string name="detail_title">Detail</string>
    <string name="header_logo_desc">This is GitUwu Logo</string>
    <string name="user_img_desc">This is user image</string>
    <string name="detail_logo_desc">This is detail logo</string>
    <string name="logo_desc">This is logo</string>
    <string name="txt_followers">Followers</string>
    <string name="txt_following">Followings</string>
    <string name="txt_at">\@</string>
    <string name="txt_separator">.</string>
    <string name="txt_repo">Repositories</string>
    <string name="tab_desc">This is tab followers and followings</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Followings</string>
    <string name="no_search_text">Click search button above to find\na GitHub user</string>
    <string name="no_follow_text">Not found any person here</string>
    <string name="strip">\-</string>

    <!-- Tool -->
    <string name="follower_count">428</string>
    <string name="following_count">428000</string>
    <string name="txt_location">Banda Aceh, Nanggroe Aceh Darussalam, Indonesia, Negara Kesatuan RI</string>
    <string name="txt_name">User 1</string>
    <string name="txt_company">JVMDeveloperID @KotlinID @IDDevOps</string>
    <string name="search">Search</string>

    <string name="txt_url">https://github.com/sidiqpermanaaaaaaaaaaaaa</string>
    <string name="content_tab_text">This is Tab %1$d</string>

    <!-- Data User -->
    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>

    <integer-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </integer-array>
</resources>