<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/user_img_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/user1" />

        <TextView
            android:id="@+id/user_name"
            style="@style/TextView.Dark"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_detail"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toEndOf="@+id/user_img"
            app:layout_constraintTop_toTopOf="@+id/user_img"
            tools:text="@string/detail_title" />

        <TextView
            android:id="@+id/txt_at"
            style="@style/TextView.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_at"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <TextView
            android:id="@+id/user_username"
            style="@style/TextView.Dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/user_name"
            app:layout_constraintStart_toEndOf="@+id/txt_at"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            tools:text="@string/user_img_desc" />

        <ImageView
            android:id="@+id/logo_follower"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/logo_desc"
            app:layout_constraintStart_toStartOf="@+id/txt_at"
            app:layout_constraintTop_toBottomOf="@+id/user_username"
            app:srcCompat="@drawable/ic_baseline_people_outline_24" />

        <TextView
            android:id="@+id/user_follower"
            style="@style/TextView.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/logo_follower"
            app:layout_constraintTop_toBottomOf="@+id/user_username"
            tools:text="@string/follower_count" />

        <TextView
            android:id="@+id/txt_follower"
            style="@style/TextView.Dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/txt_followers"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/user_username"
            app:layout_constraintStart_toEndOf="@+id/user_follower"
            app:layout_constraintTop_toBottomOf="@+id/user_username" />

        <ImageView
            android:id="@+id/logo_location"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/logo_desc"
            app:layout_constraintBottom_toBottomOf="@+id/user_img"
            app:layout_constraintStart_toStartOf="@+id/logo_follower"
            app:layout_constraintTop_toBottomOf="@+id/logo_follower"
            app:srcCompat="@drawable/ic_baseline_location_on_24" />

        <TextView
            android:id="@+id/user_location"
            style="@style/TextView.Dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/txt_location"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/user_img"
            app:layout_constraintEnd_toEndOf="@+id/txt_follower"
            app:layout_constraintStart_toEndOf="@+id/logo_location"
            app:layout_constraintTop_toBottomOf="@+id/user_follower" />

        <ImageButton
            android:id="@+id/btn_detail"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/logo_desc"
            app:layout_constraintBottom_toBottomOf="@+id/user_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_img"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>